@@ -609,7 +609,7 @@ color: #999999; font-weight: bold; padding-top: 10px; padding-bottom: 8px;">Abou
     </div>
       <div><i>"R is a reader of RSS feeds"</i></div>
       <br/>
-      <div>version 0.5.1</div>
+      <div>version 0.5.2</div>
       <div>Copyright (c) 2015, Peter Marinov and Contributors. All rights reserved.</div>
       <br/>
       <div>
@@ -662,7 +662,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       <div id="xarea_about_extra">
       <br/>
       <hr/>
-      Join the colaborative developmend of 'rrss' at GitHub:<br/>
+      Join the colaborative development of 'rrss' on GitHub:<br/>
       <a href="https://github.com/pmarinov/rrss" target="_blank">https://github.com/pmarinov/rrss</a>
       <br/><br/>
       For feedback, or to submit bug reports without creating a GitHub account:<br/>
